--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: A.P
-baseurl: "/ap"
-url: "https://kssim.github.io"
+title: 
+baseurl: 
+url: "https://xingchenliu666.github.io"
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
 
 # Author
 author:
-  name: KyeongSeob Sim
-  desc: Hello nice to meet you
-  email: ksub0912@gmail.com
+  name: Xingchen LIU
+  desc: Doctor of Philosophy
+  email: xingchenliu@u.nus.edu
   selfie: assets/img/profile.jpg
 
 # social
