--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author:
   name: Xingchen LIU
   desc: Doctor of Philosophy
   email: xingchenliu@u.nus.edu
-  selfie: assets/img/profile.jpg
+  selfie: assets/img/202204232223133.jpg
 
 # social
 social:
