--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: 
+title: Welcome to Xingchen Liu's Homepage!
 baseurl: 
-url: "https://xingchenliu666.github.io"
+url: 
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
 
 # Author
