--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,8 @@ plugins:
   - jekyll-paginate
 
 # Permalinks
-permalink: /:year-:month-:day/:title
-paginate_path: "/portfolio/page:num/"
-paginate: 5
-exclude:
-  - "Gemfile"
-  - "Gemfile.lock"
-  - "*.gem"
-  - "LICENSE"
-  - "READE.md"
-  - "screenshot.png"
+#permalink: /:year-:month-:day/:title
+#paginate_path: "/portfolio/page:num/"
+#paginate: 5
+#exclude:
+  #
